[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/CharacterSheetSubpages/TransactionLog/Transaction Logs.gd" type="Script" id=1]
[ext_resource path="res://src/UI/CharacterSheetSubpages/TransactionLog/MoneyEntries.gd" type="Script" id=2]
[ext_resource path="res://src/UI/CharacterSheetSubpages/TransactionLog/ExperienceEntries.gd" type="Script" id=3]

[node name="Transaction Logs" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Left" type="VBoxContainer" parent="."]
margin_right = 954.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Left"]
margin_right = 954.0
margin_bottom = 14.0
text = "Experience Log"
align = 1

[node name="HSeparator" type="HSeparator" parent="Left"]
margin_top = 18.0
margin_right = 954.0
margin_bottom = 22.0

[node name="ExpHeader" type="HBoxContainer" parent="Left"]
margin_top = 26.0
margin_right = 954.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Left/ExpHeader"]
margin_top = 3.0
margin_right = 451.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "Date: "

[node name="Label2" type="Label" parent="Left/ExpHeader"]
margin_left = 455.0
margin_top = 3.0
margin_right = 906.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "Amount: "

[node name="AddEntry" type="Button" parent="Left/ExpHeader"]
margin_left = 910.0
margin_right = 930.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Click me to add a new Experience Log entry!"
text = "+"

[node name="RemoveLastEntry" type="Button" parent="Left/ExpHeader"]
margin_left = 934.0
margin_right = 954.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Click me to remove the last Experience Log entry!"
text = "-"

[node name="ExperienceLog" type="ScrollContainer" parent="Left"]
margin_top = 50.0
margin_right = 954.0
margin_bottom = 1052.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExperienceEntries" type="VBoxContainer" parent="Left/ExperienceLog" groups=["Persist"]]
margin_right = 954.0
margin_bottom = 1002.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Total" type="HBoxContainer" parent="Left"]
margin_top = 1056.0
margin_right = 954.0
margin_bottom = 1080.0

[node name="IRLEdit" type="Label" parent="Left/Total"]
margin_top = 5.0
margin_right = 453.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "TOTAL:"
align = 1

[node name="ExpAmountEdit" type="LineEdit" parent="Left/Total"]
margin_left = 457.0
margin_right = 910.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
align = 1
editable = false

[node name="ButtonSpacer" type="VSeparator" parent="Left/Total"]
margin_left = 914.0
margin_right = 954.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 958.0
margin_right = 962.0
margin_bottom = 1080.0

[node name="Right" type="VBoxContainer" parent="."]
margin_left = 966.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Right"]
margin_right = 954.0
margin_bottom = 14.0
text = "Money Log"
align = 1

[node name="HSeparator" type="HSeparator" parent="Right"]
margin_top = 18.0
margin_right = 954.0
margin_bottom = 22.0

[node name="MoneyHeader" type="HBoxContainer" parent="Right"]
margin_top = 26.0
margin_right = 954.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Right/MoneyHeader"]
margin_top = 3.0
margin_right = 125.0
margin_bottom = 17.0
rect_min_size = Vector2( 125, 0 )
text = "Date: "

[node name="Label2" type="Label" parent="Right/MoneyHeader"]
margin_left = 129.0
margin_top = 3.0
margin_right = 536.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "Transaction: "

[node name="Label3" type="Label" parent="Right/MoneyHeader"]
margin_left = 540.0
margin_top = 3.0
margin_right = 610.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
text = "cp:  "

[node name="Label4" type="Label" parent="Right/MoneyHeader"]
margin_left = 614.0
margin_top = 3.0
margin_right = 684.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
text = "sp:  "

[node name="Label5" type="Label" parent="Right/MoneyHeader"]
margin_left = 688.0
margin_top = 3.0
margin_right = 758.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
text = "ep:  "

[node name="Label6" type="Label" parent="Right/MoneyHeader"]
margin_left = 762.0
margin_top = 3.0
margin_right = 832.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
text = "gp:  "

[node name="Label7" type="Label" parent="Right/MoneyHeader"]
margin_left = 836.0
margin_top = 3.0
margin_right = 906.0
margin_bottom = 17.0
rect_min_size = Vector2( 70, 0 )
text = "pp:  "

[node name="Buttons" type="HBoxContainer" parent="Right/MoneyHeader"]
margin_left = 910.0
margin_right = 954.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )

[node name="AddEntry" type="Button" parent="Right/MoneyHeader/Buttons"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Click me to add a Money Log entry!"
text = "+"

[node name="RemoveLastEntry" type="Button" parent="Right/MoneyHeader/Buttons"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Click me to remove the last Money Log entry!"
text = "-"

[node name="MoneyLog" type="ScrollContainer" parent="Right"]
margin_top = 50.0
margin_right = 954.0
margin_bottom = 1034.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyEntries" type="VBoxContainer" parent="Right/MoneyLog" groups=["Persist"]]
margin_right = 954.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="MoneyHeader2" type="HBoxContainer" parent="Right"]
margin_top = 1038.0
margin_right = 954.0
margin_bottom = 1052.0

[node name="Label" type="Label" parent="Right/MoneyHeader2"]
margin_right = 125.0
margin_bottom = 14.0
rect_min_size = Vector2( 125, 0 )

[node name="Label2" type="Label" parent="Right/MoneyHeader2"]
margin_left = 129.0
margin_right = 579.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Right/MoneyHeader2"]
margin_left = 583.0
margin_right = 654.0
margin_bottom = 14.0
rect_min_size = Vector2( 71, 0 )
text = "cp:  "

[node name="Label4" type="Label" parent="Right/MoneyHeader2"]
margin_left = 658.0
margin_right = 729.0
margin_bottom = 14.0
rect_min_size = Vector2( 71, 0 )
text = "sp:  "

[node name="Label5" type="Label" parent="Right/MoneyHeader2"]
margin_left = 733.0
margin_right = 804.0
margin_bottom = 14.0
rect_min_size = Vector2( 71, 0 )
text = "ep:  "

[node name="Label6" type="Label" parent="Right/MoneyHeader2"]
margin_left = 808.0
margin_right = 879.0
margin_bottom = 14.0
rect_min_size = Vector2( 71, 0 )
text = "gp:  "

[node name="Label7" type="Label" parent="Right/MoneyHeader2"]
margin_left = 883.0
margin_right = 954.0
margin_bottom = 14.0
rect_min_size = Vector2( 71, 0 )
text = "pp:  "

[node name="Total" type="HBoxContainer" parent="Right"]
margin_top = 1056.0
margin_right = 954.0
margin_bottom = 1080.0

[node name="IRLEdit" type="Label" parent="Right/Total"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
text = "TOTAL;"
align = 1

[node name="Transaction" type="VSeparator" parent="Right/Total"]
margin_left = 124.0
margin_right = 129.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="TransactionEdit" type="LineEdit" parent="Right/Total"]
margin_left = 133.0
margin_right = 589.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
align = 1
editable = false

[node name="cp" type="VSeparator" parent="Right/Total"]
margin_left = 593.0
margin_right = 598.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="cpEdit" type="LineEdit" parent="Right/Total"]
margin_left = 602.0
margin_right = 662.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
editable = false

[node name="sp" type="VSeparator" parent="Right/Total"]
margin_left = 666.0
margin_right = 671.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="spEdit" type="LineEdit" parent="Right/Total"]
margin_left = 675.0
margin_right = 735.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
editable = false

[node name="ep" type="VSeparator" parent="Right/Total"]
margin_left = 739.0
margin_right = 744.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="epEdit" type="LineEdit" parent="Right/Total"]
margin_left = 748.0
margin_right = 808.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
editable = false

[node name="gp" type="VSeparator" parent="Right/Total"]
margin_left = 812.0
margin_right = 817.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="gpEdit" type="LineEdit" parent="Right/Total"]
margin_left = 821.0
margin_right = 881.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
editable = false

[node name="pp" type="VSeparator" parent="Right/Total"]
margin_left = 885.0
margin_right = 890.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )

[node name="ppEdit" type="LineEdit" parent="Right/Total"]
margin_left = 894.0
margin_right = 954.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
editable = false

[connection signal="button_up" from="Left/ExpHeader/AddEntry" to="." method="_on_Exp_AddEntry_button_up"]
[connection signal="button_up" from="Left/ExpHeader/RemoveLastEntry" to="." method="_on_Exp_RemoveLastEntry_button_up"]
[connection signal="button_up" from="Right/MoneyHeader/Buttons/AddEntry" to="." method="_on_Money_AddEntry_button_up"]
[connection signal="button_up" from="Right/MoneyHeader/Buttons/RemoveLastEntry" to="." method="_on_Money_RemoveLastEntry_button_up"]
